--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     /* Set black background color, white text and some padding */
     footer {
       background-color: #555;
-      color: white;
+      color:#1c87c9;
       padding: 5px;
     }
     
@@ -51,14 +51,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#">MetroMon</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">FAQs</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="https://metro-mon.github.io/home/">Home</a></li>
+        <li><a href="#">Coming Soon!</a></li>
+        <li><a href="#">Coming Soon!</a></li>
       </ul>
       </div>
   </div>
