--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     /* Set gray background color and 100% height */
     .sidenav {
       padding-top: 20px;
-      background-color: blue;
+      background-color: gray;
       height: 100%;
     }
     
     /* Set black background color, white text and some padding */
     footer {
-      background-color: #555;
+      background-color: blue;
       color:#1c87c9;
       padding: 5px;
     }
