--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     /* Set black background color, white text and some padding */
     footer {
-      background-color: blue;
+      background-color: black;
       color:#1c87c9;
       padding: 5px;
     }
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-
+  <body style="background-color:#1c87c9;">
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
