--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-  <body style="background-color:#1c87c9;">
+  <body style="background-color:lightblue;">
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
