--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ MetroMon Modpack </a> and unzip it in the <b>mods</b> folder. <br>
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p><b>MetroMon: A server for both Pokemon and Train enthusiasts alike</b></p>
 </footer>
 
 </body>
