--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ MetroMon Modpack </a> and unzip it in the <b>mods</b> folder. <br>
 - Now, you can connect to the server under the <b>server address(you can find it in our discord)</b> and play with us! Enjoy!</b></p>
 
 <h3>3. How do we join the discord and what do we do in the discord?</h3>
-<p>The discord is where you'll be able to talk with other people joining the server, as well as on other things like the Pokemon games. There's also a currency system as well as bots that allow you to play a few games. Here is the link: https://discord.gg/fP7CxUAAn2</p>
+<p>The discord is where you'll be able to talk with other people joining the server, as well as on other things like the Pokemon games. There's also a currency system as well as bots that allow you to play a few games. Here is the <a href=
+https://discord.gg/fP7CxUAAn2">link</a>.</p>
     </div>
     <div class="col-sm-2 sidenav">
       </div>
@@ -93,3 +94,5 @@ MetroMon Modpack </a> and unzip it in the <b>mods</b> folder. <br>
 
 </body>
 </html>
+
+
